--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome To My Third Repository</h1>
     <div>
         <h3>Add new blog</h3>
-        <h5>Look mama I can write blog</h5>
+        <h5>Look mama I can write blog. It's not your mama, it's your amma</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos similique beatae voluptatum impedit exercitationem assumenda praesentium suscipit. Placeat, saepe quo deserunt nesciunt nemo iste. Placeat quibusdam magni corrupti natus alias illo doloribus delectus eos, est illum beatae, ducimus modi officia!</p>
     </div>
     <img src="makeup.jpg" alt="">
